<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/background_material_light">

    <TextView android:text="@string/my_title" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:gravity="center"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textStyle="bold"
        android:padding="@dimen/abc_control_padding_material" />

    <Button style="@style/buttontealstyle"
        android:text="@string/media_streamer"
        android:id="@+id/button_streamer"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="@dimen/abc_action_button_min_width_material"
        android:layout_marginRight="@dimen/abc_action_button_min_width_material"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/abc_action_bar_overflow_padding_end_material"
        android:singleLine="false" />


    <Button style="@style/buttontealstyle"
        android:text="@string/super_duo1"
        android:id="@+id/button_super_duo1"
        android:layout_below="@+id/button_streamer"
        android:layout_alignLeft="@+id/button_streamer"
        android:layout_alignStart="@+id/button_streamer"
        android:layout_alignRight="@+id/button_streamer"
        android:layout_alignEnd="@id/button_streamer"
        android:singleLine="false" />

    <Button style="@style/buttontealstyle"
        android:text="@string/super_duo2"
        android:id="@+id/button_super_duo2"
        android:layout_below="@+id/button_super_duo1"
        android:layout_alignLeft="@+id/button_super_duo1"
        android:layout_alignStart="@+id/button_super_duo1"
        android:gravity="center"
        android:layout_alignEnd="@id/button_super_duo1"
        android:layout_alignRight="@+id/button_super_duo1" />

    <Button style="@style/buttontealstyle"
        android:text="@string/ant_terminator"
        android:id="@+id/button_build"
        android:layout_below="@+id/button_super_duo2"
        android:layout_alignLeft="@+id/button_super_duo2"
        android:layout_alignStart="@+id/button_super_duo2"
        android:layout_alignRight="@+id/button_super_duo2"
        android:layout_alignEnd="@id/button_super_duo2" />

    <Button style="@style/buttontealstyle"
        android:text="@string/materialize"
        android:id="@+id/button_xyz"
        android:layout_below="@+id/button_build"
        android:layout_alignStart="@+id/button_build"
        android:layout_alignLeft="@+id/button_build"
        android:layout_alignRight="@+id/button_build"
        android:layout_alignEnd="@id/button_build" />

    <Button style="@style/buttonredstyle"
        android:text="@string/capstone"
        android:id="@+id/button_capstone"
        android:layout_below="@+id/button_xyz"
        android:layout_alignStart="@+id/button_xyz"
        android:layout_alignLeft="@+id/button_xyz"
        android:layout_alignEnd="@id/button_xyz"
        android:layout_alignRight="@id/button_xyz" />

</RelativeLayout>
